# mcp-server-middleware

./: Cargo.toml  README.md  TODO.md
examples/: demo_server.rs
src/: lib.rs
src/mcp_middleware/: connection_info.rs  elicitations.rs  mcp_middleware.rs  mcp_output_contract.rs  mcp_payload.rs  mod.rs  sessions.rs  stream_updates.rs
src/mcp_middleware/prompts/: mod.rs  prompt_definition.rs  prompt_executor.rs  prompt_service.rs  prompts_manager.rs
src/mcp_middleware/resources/: dynamic_resource_executor.rs  dynamic_resources.rs  mod.rs  resource_definition.rs  resource_executor.rs  resource_service.rs  resources_manager.rs
src/mcp_middleware/tool_calls/: mcp_service.rs  mcp_tool_calls.rs  mod.rs  toll_calls.rs  tool_call_context.rs  tool_call_executor.rs
tests/: session_lifecycle.rs
