[package]
name = "mcp-server-middleware"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "*", features = ["full"] }

my-http-server = { tag = "0.8.3", git = "https://github.com/MyJetTools/my-http-server.git" }

rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }

uuid = { version = "*", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


my-ai-agent = { tag = "0.1.0", git = "https://github.com/my-ai-utils/my-ai-agent.git", features = [
    "agent",
] }
